---
source: src/tests/github_secret_scanning.rs
expression: app.emails_snapshot().await
---
To: foo@example.com
From: crates.io <noreply@crates.io>
Subject: crates.io: Your API token "bar" has been revoked
Content-Type: text/plain; charset=utf-8
Content-Transfer-Encoding: quoted-printable


GitHub has notified us that your crates.io API token bar has been exposed publicly. We have revoked this token as a precaution.

Please review your account at https://crates.io to confirm that no unexpected changes have been made to your settings or crates.

Source type: some_source

URL where the token was found: some_url

--
The crates.io Team
